A......... [ZBX-5116] prevented escaping forward slashes while encoding API response to JSON text (Cemeris)
.......PS. [ZBX-11036] fixed server not to synchronize IPMI configuration for new hosts without IPMI (vso)

--------------------------------------------------------------------------------
Changes for 3.2.6rc1

New features:

Bug fixes:
........S. [ZBX-12121] fixed problem generation by timer process (gleb)
..F....... [ZBX-11530] fixed status of application inheritance from template in API::Application()->get() call (miks)
..F....... [ZBX-11536] fixed missing operator in event correlation form (miks)
..F....... [ZBX-11309] fixed collision of cookies name responsible for storing selected checkboxes (miks)
..F....... [ZBX-11981] fixed undefined index 'ns' in options output array (miks)
..F....... [ZBX-12116] fixed pagination in Maintenance page (Sasha)
A......... [ZBX-12108] fixed limit option in event.get method (Sasha)
........S. [ZBX-12100] fixed new line handling in SSH agent with numeric type of information (vso)
..F....... [ZBX-9958] fixed wrongly displayed list view after mass update failure (miks)

--------------------------------------------------------------------------------
Changes for 3.2.5

3.2.5rc1 was released as 3.2.5 without any changes

--------------------------------------------------------------------------------
Changes for 3.2.5rc1

Bug fixes:
........S. [ZBX-12075] fixed security vulnerability with execution of the remote commands on server; thanks to Lilith Wyatt, Cisco Systems (gleb)
........S. [ZBX-12076] fixed security vulnerability with execution of the remote commands on proxy; thanks to Lilith Wyatt, Cisco Systems (gleb)
..F....... [ZBX-11024] fixed popup window size in actions configuration form (miks)
..F....... [ZBX-10997] fixed usage of wrong API in screen constructor (miks)
..F....... [ZBX-11477] fixed lost user name in profile title (miks)
........S. [ZBX-11889] fixed lastaccess update for passive proxy (viktors)