@@ -293,10 +293,17 @@ elseif (hasRequest('action') && getRequest('action') == 'host.massupdate' && has
 		if (array_key_exists('encryption', $visible)) {
 			$newValues['tls_connect'] = getRequest('tls_connect', HOST_ENCRYPTION_NONE);
 			$newValues['tls_accept'] = getRequest('tls_accept', HOST_ENCRYPTION_NONE);
-			$newValues['tls_issuer'] = getRequest('tls_issuer', '');
-			$newValues['tls_subject'] = getRequest('tls_subject', '');
-			$newValues['tls_psk_identity'] = getRequest('tls_psk_identity', '');
-			$newValues['tls_psk'] = getRequest('tls_psk', '');
+
+			if ($newValues['tls_connect'] == HOST_ENCRYPTION_PSK || ($newValues['tls_accept'] & HOST_ENCRYPTION_PSK)) {
+				$newValues['tls_psk_identity'] = getRequest('tls_psk_identity', '');
+				$newValues['tls_psk'] = getRequest('tls_psk', '');
+			}
+
+			if ($newValues['tls_connect'] == HOST_ENCRYPTION_CERTIFICATE
+					|| ($newValues['tls_accept'] & HOST_ENCRYPTION_CERTIFICATE)) {
+				$newValues['tls_issuer'] = getRequest('tls_issuer', '');
+				$newValues['tls_subject'] = getRequest('tls_subject', '');
+			}
 		}
 
 		$templateIds = [];
@@ -519,10 +526,6 @@ elseif (hasRequest('add') || hasRequest('update')) {
 				'ipmi_password' => getRequest('ipmi_password'),
 				'tls_connect' => getRequest('tls_connect', HOST_ENCRYPTION_NONE),
 				'tls_accept' => getRequest('tls_accept', HOST_ENCRYPTION_NONE),
-				'tls_issuer' => getRequest('tls_issuer'),
-				'tls_subject' => getRequest('tls_subject'),
-				'tls_psk_identity' => getRequest('tls_psk_identity'),
-				'tls_psk' => getRequest('tls_psk'),
 				'groups' => $groups,
 				'templates' => $templates,
 				'interfaces' => $interfaces,
@@ -532,6 +535,17 @@ elseif (hasRequest('add') || hasRequest('update')) {
 					? []
 					: getRequest('host_inventory', [])
 			];
+
+			if ($host['tls_connect'] == HOST_ENCRYPTION_PSK || ($host['tls_accept'] & HOST_ENCRYPTION_PSK)) {
+				$host['tls_psk_identity'] = getRequest('tls_psk_identity', '');
+				$host['tls_psk'] = getRequest('tls_psk', '');
+			}
+
+			if ($host['tls_connect'] == HOST_ENCRYPTION_CERTIFICATE
+					|| ($host['tls_accept'] & HOST_ENCRYPTION_CERTIFICATE)) {
+				$host['tls_issuer'] = getRequest('tls_issuer', '');
+				$host['tls_subject'] = getRequest('tls_subject', '');
+			}
 
 			if (!$create) {
 				$host['templates_clear'] = zbx_toObject(getRequest('clear_templates', []), 'templateid');
